tests/semantic_errors/record_errors.snl
program recordErrors
type rec = record
    integer value;
end;
var integer x;
    rec item;
begin
    x.value := 1;
    item.missing := 2
end.
